fix overflow not showing on hover (vivaldi 7.5)

--- a/vivaldi/.config/vivaldi-custom/custom.css
+++ b/vivaldi/.config/vivaldi-custom/custom.css
@@ -32,9 +32,12 @@
 }
 
 #tabs-container.left .resize {
+    max-height: 100% !important;
+}
+
+#tabs-container.left .tab-strip {
     overflow-x: visible !important;
     overflow-y: visible !important;
-    max-height: 100% !important;
 }
 
 /* Fit workspace switcher to tab bar */
